feat: add products, stores, categories pages and backend routes
